--- a/shannon-entropy-estimation.cabal
+++ b/shannon-entropy-estimation.cabal
@@ -48,7 +48,7 @@ cabal-version:       >=1.10
 
 executable shannon-entropy-estimation
   -- .hs or .lhs file containing the Main module.
-  -- main-is:             
+  main-is:            Main.hs 
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
@@ -57,10 +57,10 @@ executable shannon-entropy-estimation
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8
+  build-depends:       base >=4.7 && <4.8, containers==0.5.5.1, bytestring==0.10.4.0, lazy-csv==0.5.*
   
   -- Directories containing source files.
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
